# Solid

./: .gitattributes  .gitignore  .gitmodules  Solid.code-workspace  commits.sh  license.txt  readme.md
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/include/: library.hpp  test.hpp
src/App/include/App/: library.hpp
src/App/include/App/Common/Audio/: AudioManager.hpp
src/App/include/App/Common/Graphics/: IParticle.hpp  Node.hpp  NodeRegistry.hpp  ParticleBase.hpp  ParticleSystem.hpp  PlaneParticle.hpp  SphericalParticle.hpp  Telop.hpp  TelopSystem.hpp
src/App/include/App/Common/Util/: BackButton.hpp  FpsController.hpp
src/App/include/App/Scenes/Debug/: DebugScene.hpp
src/App/include/App/Scenes/Demo/: DemoScene.hpp
src/App/include/App/Scenes/Demo2D/: Demo2DScene.hpp
src/App/include/App/Scenes/Demo3D/: Demo3DScene.hpp
src/App/include/App/Scenes/DemoUI/: DemoUIScene.hpp
src/App/include/App/Scenes/Game/: GameScene.hpp
src/App/include/App/Scenes/Launcher/: LauncherScene.hpp
src/App/include/App/Scenes/Title/: TitleScene.hpp
src/App/include/Common/: Constants.hpp  FpsController.hpp
src/App/include/Common/Graphics/: IParticle.hpp  Node.hpp  NodeRegistry.hpp  Particle.hpp  ParticleBase.hpp  ParticleSystem.hpp  SphericalParticle.hpp  Telop.hpp  TelopSystem.hpp
src/App/include/Common/Util/: FpsController.hpp  Time.hpp
src/App/include/Debug/: DebugScene.hpp
src/App/include/Scenes/Debug/: DebugScene.hpp
src/App/include/Scenes/Demo/: DemoScene.hpp
src/App/include/Scenes/Game/: GameScene.hpp
src/App/include/Scenes/Game/System/: BasicEntity.hpp  Chunk.hpp  ChunkGenerator.hpp  DamageSource.hpp  Entity.hpp  Field.hpp  FieldGenerator.hpp  Minimap.hpp  PlayerEntity.hpp
src/App/include/Scenes/Title/: TitleScene.hpp
src/App/lib/: main.cpp  test.cpp
src/App/lib/App/: main.cpp  test.cpp
src/App/lib/App/Common/Audio/: AudioManager.cpp
src/App/lib/App/Common/Graphics/: Node.cpp  NodeRegistry.cpp  ParticleSystem.cpp  Telop.cpp  TelopSystem.cpp
src/App/lib/App/Common/Util/: BackButton.cpp  FpsController.cpp
src/App/lib/App/Scenes/Debug/: DebugScene.cpp
src/App/lib/App/Scenes/Demo/: DemoScene.cpp
src/App/lib/App/Scenes/Demo2D/: Demo2DScene.cpp
src/App/lib/App/Scenes/Demo3D/: Demo3DScene.cpp
src/App/lib/App/Scenes/DemoUI/: DemoUIScene.cpp
src/App/lib/App/Scenes/Game/: GameScene.cpp
src/App/lib/App/Scenes/Launcher/: LauncherScene.cpp
src/App/lib/App/Scenes/Title/: TitleScene.cpp
src/App/lib/Common/: FpsController.cpp
src/App/lib/Common/Graphics/: Node.cpp  NodeRegistry.cpp  ParticleSystem.cpp  Telop.cpp  TelopSystem.cpp
src/App/lib/Common/Util/: FpsController.cpp  Time.cpp
src/App/lib/Debug/: DebugScene.cpp
src/App/lib/Scenes/Debug/: DebugScene.cpp
src/App/lib/Scenes/Demo/: DemoScene.cpp
src/App/lib/Scenes/Game/: GameScene.cpp
src/App/lib/Scenes/Game/System/: BasicEntity.cpp  Chunk.cpp  ChunkGenerator.cpp  DamageSource.cpp  Entity.cpp  Field.cpp  FieldGenerator.cpp  Minimap.cpp  PlayerEntity.cpp
src/App/lib/Scenes/Title/: TitleScene.cpp
src/App/mod/Audio/: CMakeLists.txt
src/App/mod/Audio/include/: Audio.hpp
src/App/mod/Audio/include/Audio/: AudioClip.hpp  AudioSource.hpp  AudioSystem.hpp
src/App/mod/Audio/lib/Audio/: AudioClip.cpp  AudioSource.cpp  AudioSystem.cpp
src/App/mod/Graphics/: CMakeLists.txt  Embed.ps1  Generate.ps1  Rehash.ps1  RehashRun.bat
src/App/mod/Graphics/embed/: Color2D.ps  Color2D.vs  Library.inc  MeshColor3D.ps  MeshColor3D.vs  MeshInstanceColor3D.vs  MeshInstanceTexture3D.ps  MeshInstanceTexture3D.vs  MeshLine3D.gs  MeshLine3D.ps  MeshLine3D.vs  MeshTexture3D.vs  MeshWireframe3D.gs  MeshWireframe3D.ps  MeshWireframe3D.vs  ParticleInstance3D.cs  ParticleInstance3D.ps  ParticleInstance3D.vs  Text2D.ps  Texture2D.ps  Texture2D.vs  Tile3D.vs  TileInstance3D.ps  TileInstance3D.vs
src/App/mod/Graphics/include/: Graphics.hpp
src/App/mod/Graphics/include/Graphics/: BloomEffect.hpp  Buffer.hpp  Camera.hpp  Color.hpp  Constant.hpp  CpuBuffer.hpp  Device.hpp  DualBuffer.hpp  Engine.hpp  Font.hpp  FontFactory.hpp  FontMap.hpp  FontMetrics.hpp  FontSprite.hpp  GlobalLight.hpp  GpuBuffer.hpp  Gui.hpp  IBuffer.hpp  MatrixStack.hpp  Metadata.hpp  PipelineStateObject.hpp  PointLight.hpp  Polygon.hpp  Pso.hpp  Reflect.hpp  RenderContext.hpp  RenderInterface.hpp  RenderParameter.hpp  Renderer.hpp  Screen.hpp  Shader.hpp  Surface.hpp  Swapchain.hpp  Texture.hpp  TileBatch.hpp  TileBuffer.hpp  TileRenderer.hpp  UniformBuffer.hpp  UniformPool.hpp  VertexData2D.hpp  (+8 more)
src/App/mod/Graphics/lib/Graphics/: BloomEffect.cpp  Buffer.cpp  Camera.cpp  Constant.cpp  CpuBuffer.cpp  Device.cpp  DualBuffer.cpp  Engine.cpp  Font.cpp  FontFactory.cpp  FontMap.cpp  FontMetrics.cpp  FontSprite.cpp  GlobalLight.cpp  GpuBuffer.cpp  Gui.cpp  MatrixStack.cpp  PipelineStateObject.cpp  PointLight.cpp  Polygon.cpp  Pso.cpp  RenderContext.cpp  RenderParameter.cpp  Renderer.cpp  Screen.cpp  Shader.cpp  Surface.cpp  Swapchain.cpp  Texture.cpp  TileBatch.cpp  TileBuffer.cpp  TileRenderer.cpp  UniformBuffer.cpp  UniformPool.cpp  (+9 more)
src/App/mod/Graphics/test/: CMakeLists.txt  main.cpp
src/App/mod/Input/: CMakeLists.txt
src/App/mod/Input/include/: Input.hpp
src/App/mod/Json/: CMakeLists.txt
src/App/mod/Math/: CMakeLists.txt
src/App/mod/Math/include/: Math.hpp
src/App/mod/Math/test/: CMakeLists.txt  main.cpp
src/App/mod/OS/: CMakeLists.txt
src/App/mod/OS/include/: OS.hpp
src/App/mod/Scene/: CMakeLists.txt
src/App/mod/Scene/include/: Scene.hpp
src/App/mod/UI/: CMakeLists.txt
src/App/mod/UI/include/: UI.hpp
src/App/mod/Utils/: CMakeLists.txt
src/App/mod/Utils/include/: Utils.hpp
src/App/mod/Utils/test/: CMakeLists.txt  main.cpp
src/App/mod/Uuid/: CMakeLists.txt
src/App/test/: CMakeLists.txt
src/Solid/: CMakeLists.txt
src/Solid/lib/: main.cpp
src/Solid/mod/: CMakeLists.txt
src/Solid/mod/Graphics/: CMakeLists.txt
src/Solid/mod/Graphics/include/: Graphics.hpp
src/Solid/mod/Math/: CMakeLists.txt
src/Solid/mod/Math/include/: Math.hpp
src/Solid/mod/Math/test/: CMakeLists.txt  main.cpp
(+199 files in other folders)
