cmake_minimum_required(VERSION 3.25)
project(
    App
    VERSION 0.0.1
    LANGUAGES CXX
)
#
# Common Variables
#
set(MODS "${CMAKE_CURRENT_SOURCE_DIR}/mod")
#
# Function
#
function(mod_test target)
    add_subdirectory("${MODS}/${target}/test")
    add_test("${target}-Test" "${CMAKE_CURRENT_BINARY_DIR}/test/Lib-${target}-Test.exe")
    add_custom_target("${target}-Test" COMMAND ${CMAKE_CTEST_COMMAND} --verbose DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/test/Lib-${target}-Test.exe")
endfunction()
#
# Submodules
#
add_subdirectory(./mod/Json)
add_subdirectory(./mod/Uuid)
add_subdirectory(./mod/Input)
add_subdirectory(./mod/Math)
add_subdirectory(./mod/Audio)
add_subdirectory(./mod/Graphics)
add_subdirectory(./mod/OS)
add_subdirectory(./mod/Scene)
add_subdirectory(./mod/Utils)
add_subdirectory(./mod/UI)
#
# Build Options
#
set(SOURCES
    ./include/App/main.hpp
    ./include/App/test.hpp
    ./include/App/Common/Audio/AudioManager.hpp
    ./include/App/Common/Graphics/Node.hpp
    ./include/App/Common/Graphics/NodeRegistry.hpp
    ./include/App/Common/Graphics/IParticle.hpp
    ./include/App/Common/Graphics/ParticleBase.hpp
    ./include/App/Common/Graphics/ParticleSystem.hpp
    ./include/App/Common/Graphics/SphericalParticle.hpp
    ./include/App/Common/Graphics/Telop.hpp
    ./include/App/Common/Graphics/TelopSystem.hpp
    ./include/App/Common/Util/FpsController.hpp
    ./include/App/Common/Util/BackButton.hpp
    ./include/App/Scenes/Title/TitleScene.hpp
    ./include/App/Scenes/Game/GameScene.hpp
    ./include/App/Scenes/Game/System/Weapon.hpp
    ./include/App/Scenes/Game/System/WeaponRegistry.hpp
    ./include/App/Scenes/Game/System/Field.hpp
    ./include/App/Scenes/Game/System/Chunk.hpp
    ./include/App/Scenes/Game/System/ChunkGenerator.hpp
    ./include/App/Scenes/Game/System/Entity.hpp
    ./include/App/Scenes/Game/System/DamageSource.hpp
    ./include/App/Scenes/Game/System/Entities/BasicEntity.hpp
    ./include/App/Scenes/Game/System/Entities/PlayerEntity.hpp
    ./include/App/Scenes/Game/System/Entities/EnemyEntity.hpp
    ./include/App/Scenes/Game/System/Entities/SlimeEntity.hpp
    ./include/App/Scenes/Game/System/Entities/ProjectileEntity.hpp
    ./include/App/Scenes/Game/System/Weapons/SingleOneShotWeapon.hpp
    ./include/App/Scenes/Game/System/Weapons/SingleHoldWeapon.hpp
    ./include/App/Scenes/Game/UI/Minimap.hpp
    ./include/App/Scenes/Launcher/LauncherScene.hpp
    ./include/App/Scenes/Demo2D/Demo2DScene.hpp
    ./include/App/Scenes/Demo3D/Demo3DScene.hpp
    ./include/App/Scenes/DemoUI/DemoUIScene.hpp
    ./lib/App/main.cpp
    ./lib/App/test.cpp
    ./lib/App/Common/Audio/AudioManager.cpp
    ./lib/App/Common/Graphics/Node.cpp
    ./lib/App/Common/Graphics/NodeRegistry.cpp
    ./lib/App/Common/Graphics/ParticleSystem.cpp
    ./lib/App/Common/Graphics/Telop.cpp
    ./lib/App/Common/Graphics/TelopSystem.cpp
    ./lib/App/Common/Util/FpsController.cpp
    ./lib/App/Common/Util/BackButton.cpp
    ./lib/App/Scenes/Title/TitleScene.cpp
    ./lib/App/Scenes/Game/GameScene.cpp
    ./lib/App/Scenes/Game/System/Weapon.cpp
    ./lib/App/Scenes/Game/System/WeaponRegistry.cpp
    ./lib/App/Scenes/Game/System/Field.cpp
    ./lib/App/Scenes/Game/System/Chunk.cpp
    ./lib/App/Scenes/Game/System/ChunkGenerator.cpp
    ./lib/App/Scenes/Game/System/Entity.cpp
    ./lib/App/Scenes/Game/System/DamageSource.cpp
    ./lib/App/Scenes/Game/System/Entities/BasicEntity.cpp
    ./lib/App/Scenes/Game/System/Entities/PlayerEntity.cpp
    ./lib/App/Scenes/Game/System/Entities/EnemyEntity.cpp
    ./lib/App/Scenes/Game/System/Entities/SlimeEntity.cpp
    ./lib/App/Scenes/Game/System/Entities/ProjectileEntity.cpp
    ./lib/App/Scenes/Game/System/Weapons/SingleOneShotWeapon.cpp
    ./lib/App/Scenes/Game/System/Weapons/SingleHoldWeapon.cpp
    ./lib/App/Scenes/Game/UI/Minimap.cpp
    ./lib/App/Scenes/Launcher/LauncherScene.cpp
    ./lib/App/Scenes/Demo2D/Demo2DScene.cpp
    ./lib/App/Scenes/Demo3D/Demo3DScene.cpp
    ./lib/App/Scenes/DemoUI/DemoUIScene.cpp
)
source_group(
    TREE
    ${CMAKE_CURRENT_SOURCE_DIR}
    FILES
    ${SOURCES}
)
add_executable(
    App
    ${SOURCES}
)
set_property(
    TARGET
    App
    PROPERTY
    VS_DEBUGGER_WORKING_DIRECTORY
    "${CMAKE_CURRENT_SOURCE_DIR}/../../"
)
app_target_compile_params(App)
app_target_link_params(App)
target_include_directories(
    App
    PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/include"
    "${MODS}/Input/include"
    "${MODS}/Graphics/include"
    "${MODS}/Math/include"
    "${MODS}/Audio/include"
    "${MODS}/OS/include"
    "${MODS}/Scene/include"
    "${MODS}/Uuid/include"
    "${MODS}/Utils/include"
    "${MODS}/UI/include"
)
target_link_libraries(
    App
    PRIVATE
    Lib-Json
    Lib-Uuid
    Lib-Input
    Lib-Math
    Lib-Audio
    Lib-Graphics
    Lib-OS
    Lib-Scene
    Lib-Utils
    Lib-UI
)

enable_testing()
add_subdirectory(./test)
add_test(NAME Test COMMAND "${CMAKE_CURRENT_BINARY_DIR}/test/App-Test.exe" WORKING_DIRECTORY ${REPOSITORY_ROOT})
add_custom_target(Test COMMAND ${CMAKE_CTEST_COMMAND} --verbose DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/test/App-Test.exe")