cmake_minimum_required(VERSION 3.25)
project(
    Lib-UI
    VERSION 0.0.1
    LANGUAGES CXX
)
#
# Build Options
#
set(SOURCES
    ./include/UI.hpp
    ./include/UI/Component.hpp
    ./include/UI/Container.hpp
    ./include/UI/ILayoutManager.hpp
    ./include/UI/LayoutElement.hpp
    ./include/UI/LayoutHint.hpp
    ./include/UI/ColorIcon.hpp
    ./include/UI/Panel.hpp
    ./include/UI/Label.hpp
    ./include/UI/Button.hpp
    ./include/UI/Box.hpp
    ./include/UI/BoxLayout.hpp
    ./include/UI/BorderLayout.hpp
    ./lib/UI/Component.cpp
    ./lib/UI/Container.cpp
    ./lib/UI/LayoutElement.cpp
    ./lib/UI/ColorIcon.cpp
    ./lib/UI/Panel.cpp
    ./lib/UI/Label.cpp
    ./lib/UI/Button.cpp
    ./lib/UI/Box.cpp
    ./lib/UI/BoxLayout.cpp
    ./lib/UI/BorderLayout.cpp
)
source_group(
    TREE
    ${CMAKE_CURRENT_SOURCE_DIR}
    FILES
    ${SOURCES}
)
add_library(
    Lib-UI
    STATIC
    ${SOURCES}
)
lib_target_compile_params(Lib-UI)
lib_target_link_params(Lib-UI)
target_include_directories(
    Lib-UI
    PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/include"
    "${MODS}/Graphics/include"
    "${MODS}/Input/include"
    "${MODS}/Math/include"
    "${MODS}/Utils/include"
)
target_link_libraries(
    Lib-UI
    PRIVATE
    Lib-Graphics
    Lib-Input
    Lib-Math
    Lib-Utils
)